se realiza un cambio en la dirección de la imagen

--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h1>Este es un sitio Web con GitHub Pages</h1>
 <p>Se estará desarrollando un entrno para que puedan conocer mas sobre Diego Valbuena</p>
-<p><img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fmaestrabeaavemaria.wordpress.com%2F2020%2F04%2F06%2Fsopresa-de-fresa%2F&psig=AOvVaw3EZf5sk8YXp6FrF6IbuuCN&ust=1645214073018000&source=images&cd=vfe&ved=0CAkQjRxqFwoTCNDztLnCh_YCFQAAAAAdAAAAABAK"></p>
+<p><img src="https://i.pinimg.com/originals/ac/58/e2/ac58e220e1028c09c9f85a7fa3547f54.gif"></p>
