se realiza cambio del gif

--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h1>Este es un sitio Web con GitHub Pages</h1>
 <p>Se estará desarrollando un entrno para que puedan conocer mas sobre Diego Valbuena</p>
-<p><img src="https://i.pinimg.com/originals/ac/58/e2/ac58e220e1028c09c9f85a7fa3547f54.gif"></p>
+<p><img src="https://thumbs.gfycat.com/FrigidYellowishArgali-size_restricted.gif"></p>
