--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h1>Este es un sitio Web con GitHub Pages</h1>
-<p>Se estará desarrollando un entrno para que puedan conocer mas sobre Diego Valbuena</p>
+<p>Se estará desarrollando un entorno para que puedan conocer mas sobre Diego Valbuena</p>
 <p><img src="https://thumbs.gfycat.com/FrigidYellowishArgali-size_restricted.gif"></p>
